--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="desc">Strict</div>
         <input type="range" min="1" max="10" value="7" class="slider" id="slider-1">
         <div class="desc">Relaxed</div>
+        <div id="help">?</div>
         <div id="go-button">Go</div>
         <div id="delete-selected">Delete Marked</div>
     </div>
@@ -47,6 +48,6 @@
 
 
 
- <script> require('./renderer.js') </script>
+<script> require('./renderer.js') </script>
 </body>
 </html>
