First fully functional
Added deletion of marked files, which makes this the first fully functional commit. Refactoring, comments, etc is still needed.

--- a/help.html
+++ b/help.html
@@ -9,7 +9,7 @@
 <body>
     <header class="title-bar">
         <div class="win-option" id="close">&#x2716;</div>
-        <!-- <div id="title">Help</div> -->
+        <div id="title">Help</div>
     </header>
 
     <div class="content"> 
