Fixed formatting, fonts and symbols
fonts and symbols need to be different in mac

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="title-bar">
         <div class="win-option" id="close">&#x2716;</div>
         <div class="win-option" id="maximize">&#x1f5d6;</div>
-        <div class="win-option" id="minimize">&#x1f5d5;</div>
+        <div class="win-option" id="minimize">―</div>
         <div id="title">Dupic</div>
     </header>
     <div class="control-bar">
